--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -48,7 +48,7 @@
       background-image: url(../images/bg/bg.sec.2_@2x.png);
     }
   }
-  
+
   &__label-title {
     margin-bottom: 12px;
 
@@ -114,18 +114,51 @@
   border-radius: 50%;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: -60px;
+    margin-bottom: -70px;
   }
   @media screen and (min-width: 1200px) {
+    width: 300px;
+    height: 300px;
     margin-bottom: -80px;
     max-width: 300px;
   }
 
-  & .img {
+  &::before {
+    content: '';
+    display: block;
+    width: 200px;
+    height: 200px;
     transform: translateY(-11px);
-
-    @media screen and (min-width: 1200px) {
+    background-image: url(../images/products/Ice-cream.sec.2.mobile_@1x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/products/Ice-cream.sec.2.mobile_@2x.png);
+    }
+    
+    @media screen and (min-width: 1200) {
+      width: 300px;
+      height: 300px;
       transform: translateY(-17px);
+    }
+    @media screen and (min-width: 481px) {
+      background-image: url(../images/products/Ice-cream.sec.2.tablet_@1x.png);
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(../images/products/Ice-cream.sec.2.tablet_@2x.png);
+      }
+    }
+
+    @media screen and (min-width: 769px) {
+      background-image: url(../images/products/Ice-cream.sec.2_@1x.png);
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(../images/products/Ice-cream.sec.2_@2x.png);
+      }
     }
   }
 }
@@ -173,7 +206,6 @@
 .product {
   padding-right: 40px;
   padding-left: 40px;
-  padding-bottom: 5px;
 
   border-radius: 24px;
 
@@ -191,8 +223,8 @@
     min-height: 428px;
   }
   @media screen and (min-width: 1200px) {
-    padding-right: 64px;
-    padding-left: 64px;
+    padding-right: 63px;
+    padding-left: 63px;
     min-height: 535px;
   }
 
@@ -268,6 +300,7 @@
 }
 .product__button {
   padding: 5px;
+  max-height: 30px;
   border: none;
   background-color: transparent;
 
