--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -41,7 +41,7 @@
                 aria-label="link to Facebook">
                 <svg class="socials__icon" width="34" height="34">
                   <use
-                    href="#">
+                    href="">
                 </use>
                 </svg>
               </a>
