--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,13 +6,18 @@
     </div>
     <div class="about__inline">
       <div class="about__shape">
-        <img src="./images/about/cow.mobile_@1x.png" alt="picture of a cow" width="279" class="about__image">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="./images/about/cow.mobile_@1x.png 1x, ./images/about/cow.mobile_@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="./images/about/cow.tablet_@1x.png 1x, ./images/about/cow.tablet_@2x.png 2x">
+          <source media="(max-width: 767px)" srcset="./images/about/cow.desc_@1x.png 1x, ./images/about/cow.desc_@2x.png 2x">
+          <img src="./images/about/cow.desc_@1x.png" alt="picture of a cow" width="279" class="about__image">
+        </picture>
       </div>
       <p class="about__uppertext">Ice is a place where you will become not only a little happier, but also healthier. Health is the main value for us, and we follow it when creating our handmade desserts. </p>
       <p class="about__text">We use traditional recipes and 100% natural ingredients. Our products are so natural that they can be given to children from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.</p>
-      <button type="button" data-modal="how-made" class="about__button open-modal js-open-modal">Read More
+      <button type="button" data-modal="how-made" class="about__button open-modal js-open-modal btn">Read More
         <svg class="about__icon" width="12" height="12">
-          <use href="./images/svg/symbol-defs.svg#black-arrow"></use>
+          <!-- <use href="./images/svg/symbol-defs.svg#black-arrow"></use> -->
         </svg>
       </button>
     </div>
