--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -49,7 +49,10 @@
     background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
     border-radius: 140.182px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+  }
+  &__image {
+    transform: translateY(20px);
   }
   &__uppertext {
     margin-bottom: 4px;
