--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -27,11 +27,33 @@
   }
   &__circle {
     display: block;
+    position: relative;
     background: #F8D24E;
     border-radius: 25px;
     width: 50px;
     height: 50px;
     margin-bottom: 16px;
+    &-cow::after {
+      content: url(../images/advantages/cow.sec.adv_@1x.png);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0px;
+    }
+    &-ice::after {
+      content: url(../images/advantages/ice-crem.sec.adv_@1x.png);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0px;
+    }
+    &-weight::after {
+      content: url(../images/advantages/frame.sec.adv_@1x.png);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0px;
+    }
   }
   &__text {
     font-weight: 700;
