--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
-<footer class="foot">
-    <div class="foot__container container">
+<footer class="footer">
+    <div class="footer__container container">
         <ul class="foot-banner">
             <li>
-        <p class="foot-banner__paragraph">homemade ice cream made</p>
-        <h2 class="foot-banner__header">with passion</h2>
+        <p class="footer-banner__paragraph">homemade ice cream made</p>
+        <h2 class="footer-banner__header">with passion</h2>
             </li>
         </ul>
         <div class="socials">
@@ -28,7 +28,7 @@
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
                   <use>
-                    href="#"
+                    href="./images/svg/symbol-defs/"
                   </use>
                 </svg>
               </a>
@@ -49,10 +49,10 @@
           </ul>
         </div>
   
-        <div class="foot-contacts">
-          <address class="foot-contacts__address">
-            <span class="foot-contacts__text">Feel free to contact</span>
-            <a class="foot-contacts__tel" href="tel:+610383766284"
+        <div class="footer-contacts">
+          <address class="footer-contacts__address">
+            <span class="footer-contacts__text">Feel free to contact</span>
+            <a class="footer-contacts__tel" href="tel:+610383766284"
               >+61 (0) 383 766 284</a>
           </address>
         </div>
