--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -160,18 +160,30 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contacts__item {
+
+@media screen and (min-width: 768px) {
+  .contacts__list {
     display: flex;
     gap: 16px;
   }
+  
+  @media screen and (min-width: 1200px) {
+    .contacts__list {
+            gap: 32px;
+        }
+  }
 }
 
-@media screen and (min-width: 1200px) {
-  .contacts__item {
-    display: flex;
-    gap: 32px;
-  }
+.contacts__list {
+    margin-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 64px;
+    }
 }
 
 .btn_location {
@@ -240,6 +252,7 @@
         gap: 16px;
         margin-left: auto;
         margin-right: auto;
-        align-self: center;
+        align-items: center;
+        justify-content: center;
     }
 }
