--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer__container container">
-        <ul class="foot-banner">
+        <ul class="footer-banner">
             <li>
         <p class="footer-banner__paragraph">homemade ice cream made</p>
         <h2 class="footer-banner__header">with passion</h2>
@@ -16,7 +16,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to GitHub">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="#"></use>
+                  <use href="./images\svg\symbol-defs.svg#githubdefault"></use>
                 </svg>
               </a>
             </li>
@@ -28,7 +28,7 @@
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
                   <use>
-                    href="./images/svg/symbol-defs/"
+                    href=""
                   </use>
                 </svg>
               </a>
