--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,7 +28,7 @@
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
                   <use>
-                    href=""
+                    href="#"
                   </use>
                 </svg>
               </a>
