--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,63 +1,67 @@
 <footer class="footer">
-    <div class="footer__container container">
-        <ul class="footer-banner">
-            <li>
+  <div class="footer__container container">
+    <ul class="footer-banner">
+      <li>
         <p class="footer-banner__paragraph">homemade ice cream made</p>
         <h2 class="footer-banner__header">with passion</h2>
-            </li>
-        </ul>
-        <div class="socials">
-          <ul class="socials__list list">
-            <li class="socials__item">
-              <a
-                class="socials__link"
-                href="https://github.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to GitHub">
-                <svg class="socials__icon" width="34" height="34">
-                  <use href="./images\svg\symbol-defs.svg#githubdefault"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link"
-                href="https://web.telegram.org/z/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to Telegram">
-                <svg class="socials__icon" width="34" height="34">
-                  <use>
-                    href="#"
-                  </use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link"
-                href="https://uk-ua.facebook.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to Facebook">
-                <svg class="socials__icon" width="34" height="34">
-                  <use
+      </li>
+    </ul>
+    <div class="socials">
+      <ul class="socials__list list">
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://github.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to GitHub"
+          >
+            <svg class="socials__icon" width="34" height="34">
+              <use href="./images\svg\symbol-defs.svg#githubdefault"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://web.telegram.org/z/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to Telegram"
+          >
+            <svg class="socials__icon" width="34" height="34">
+              <use>href="#"</use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://uk-ua.facebook.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to Facebook"
+          >
+            <svg class="socials__icon" width="34" height="34">
+              <!-- <use
                     href="">
-                </use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-  
-        <div class="footer-contacts">
-          <address class="footer-contacts__address">
-            <span class="footer-contacts__text">Feel free to contact</span>
-            <a class="footer-contacts__tel" href="tel:+610383766284"
-              >+61 (0) 383 766 284</a>
-          </address>
-        </div>
-      </div>
-    <div class="copyright">
-      <p class="copyright__text"> © 2022 - IceCream. All Rights Reserved. </p>
+                </use> -->
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-contacts">
+      <address class="footer-contacts__address">
+        <span class="footer-contacts__text">Feel free to contact</span>
+        <a class="footer-contacts__tel" href="tel:+610383766284"
+          >+61 (0) 383 766 284</a
+        >
+      </address>
+    </div>
+  </div>
+  <div class="copyright">
+    <p class="copyright__text">© 2022 - IceCream. All Rights Reserved.</p>
+  </div>
+</footer>
