--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="container header__container">
-    <a class="header__logo-link" href="./index.html">
+    <a class="header__logo" href="./index.html">
       <img
-        class="header__logo img"
+        class="logo__img img"
         srcset="
           ./images/header/logo.mobile_@1x.png  41w,
           ./images/header/logo.tablet_@1x.png  48w,
@@ -20,16 +20,16 @@
 
     <nav class="header__nav">
       <ul class="header__list list">
-        <li class="header__list-item">
+        <li class="header__item">
           <a class="header__link link" href="./index.html">Home</a>
         </li>
-        <li class="header__list-item">
+        <li class="header__item">
           <a class="header__link link" href="#about">How it’s made?</a>
         </li>
-        <li class="header__list-item">
+        <li class="header__item">
           <a class="header__link link" href="#products">Our products</a>
         </li>
-        <li class="header__list-item">
+        <li class="header__item">
           <a class="header__link link" href="#contacts">Contact</a>
         </li>
       </ul>
