--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,11 +6,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 8px;
 }
 
-.header__logo-link {
-  display: flex;
-  justify-content: flex-start;
+.header__logo {
   margin-right: 292px;
 }
 
@@ -18,13 +17,13 @@
   display: flex;
 }
 
-.header__list-item:not(:last-child) {
+.header__item:not(:last-child) {
   margin-right: 27px;
 }
 
 .header__link {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(20 / 16);
