--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,8 +4,7 @@
     <h2 class="products__title">Products</h2>
     <ul class="list products__list">
       <li class="product ice-cream">
-        <div class="picture-container ice-cream__picture-container">
-        </div>
+        <div class="picture-container ice-cream__picture-container"></div>
         <h3 class="product__title">ice cream</h3>
         <p class="product__text">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
@@ -19,22 +18,21 @@
           <svg class="icon-button" width="40px" height="15px">
             <use
               class="arrow arrow--default"
-              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+              href="./images/svg/icons.svg#arrow-default"
             ></use>
             <use
               class="arrow arrow--hover"
-              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+              href="./images/svg/icons.svg#arrow-hover"
             ></use>
             <use
               class="arrow arrow--focus"
-              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+              href="./images/svg/icons.svg#arrow-focus"
             ></use>
           </svg>
         </button>
       </li>
       <li class="product ice-coffee">
-        <div class="picture-container ice-coffee__picture-container">
-        </div>
+        <div class="picture-container ice-coffee__picture-container"></div>
         <h3 class="product__title">ice coffee</h3>
         <p class="product__text">
           Fragrant invigorating drink created from 100% natural ingredients
@@ -48,22 +46,21 @@
           <svg class="icon-button" width="40px" height="15px">
             <use
               class="arrow arrow--default"
-              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+              href="./images/svg/icons.svg#arrow-default"
             ></use>
             <use
               class="arrow arrow--hover"
-              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+              href="./images/svg/icons.svg#arrow-hover"
             ></use>
             <use
               class="arrow arrow--focus"
-              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+              href="./images/svg/icons.svg#arrow-focus"
             ></use>
           </svg>
         </button>
       </li>
       <li class="product milkshake">
-        <div class="picture-container milkshake__picture-container">
-        </div>
+        <div class="picture-container milkshake__picture-container"></div>
         <h3 class="product__title">milkshakes</h3>
         <p class="product__text">
           Sweet drinks based on milk and ice cream, supplemented with syrups,
@@ -77,15 +74,15 @@
           <svg class="icon-button" width="40px" height="15px">
             <use
               class="arrow arrow--default"
-              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+              href="./images/svg/icons.svg#arrow-default"
             ></use>
             <use
               class="arrow arrow--hover"
-              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+              href="./images/svg/icons.svg#arrow-hover"
             ></use>
             <use
               class="arrow arrow--focus"
-              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+              href="./images/svg/icons.svg#arrow-focus"
             ></use>
           </svg>
         </button>
