--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,9 +27,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
-                  <use>
-                    href="#"
-                  </use>
+                  <use href="#"></use>
                 </svg>
               </a>
             </li>
