--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,8 +9,7 @@
         <div class="socials">
           <ul class="socials__list list">
             <li class="socials__item">
-              <a
-                class="socials__link"
+              <a class="socials__link"
                 href="https://github.com/"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -27,7 +26,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="#"></use>
+                  <use href="./images\svg\symbol-defs.svg#telegramdefault"></use>
                 </svg>
               </a>
             </li>
@@ -39,7 +38,7 @@
                 aria-label="link to Facebook">
                 <svg class="socials__icon" width="34" height="34">
                   <use
-                    href="">
+                    href="./images\svg\symbol-defs.svg#facebookdefault">
                 </use>
                 </svg>
               </a>
