--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,8 @@
         <div class="socials">
           <ul class="socials__list list">
             <li class="socials__item">
-              <a class="socials__link"
+              <a
+                class="socials__link"
                 href="https://github.com/"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -26,7 +27,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="./images\svg\symbol-defs.svg#telegramdefault"></use>
+                  <use href="#"></use>
                 </svg>
               </a>
             </li>
@@ -38,7 +39,7 @@
                 aria-label="link to Facebook">
                 <svg class="socials__icon" width="34" height="34">
                   <use
-                    href="./images\svg\symbol-defs.svg#facebookdefault">
+                    href="">
                 </use>
                 </svg>
               </a>
