--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,7 +27,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="#"></use>
+                  <use href="./images\svg\symbol-defs.svg#telegramdefault"></use>
                 </svg>
               </a>
             </li>
@@ -39,7 +39,7 @@
                 aria-label="link to Facebook">
                 <svg class="socials__icon" width="34" height="34">
                   <use
-                    href="">
+                    href="./images\svg\symbol-defs.svg#facebookdefault">
                 </use>
                 </svg>
               </a>
