--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,8 +9,7 @@
         <div class="socials">
           <ul class="socials__list list">
             <li class="socials__item">
-              <a
-                class="socials__link"
+              <a class="socials__link"
                 href="https://github.com/"
                 target="_blank"
                 rel="noreferrer noopener"
