--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,12 +1,34 @@
     <!-- /**
+  |============================
+  | Open modal buttons
+  |============================
+*/ -->
+
+    <div class="buttons">
+      <button type="button" data-modal="buy-now" class="open-modal js-open-modal">Buy Now</button>
+      <button type="button" data-modal="buy-now_ingredients" class="open-modal js-open-modal">
+        Buy Now (with Ingredients)
+      </button>
+      <button type="button" data-modal="how-made" class="open-modal js-open-modal">
+        How It`s Made
+      </button>
+      <button type="button" data-modal="locations" class="open-modal js-open-modal">
+        Our Locations
+      </button>
+      <button type="button" data-modal="franchise" class="open-modal js-open-modal">
+        Franchise
+      </button>
+    </div>
+
+    <!-- /**
       |============================
       | Buy Now Modal Window
       |============================
     */ -->
 
-    <div class="modal js-modal" data-modal="buy-now">
+    <div class="buy-now_modal modal js-modal" data-modal="buy-now">
       <button type="button" class="modal-close js-modal-close">X</button>
-      <h3 class="modal_title">Buy now</h3>
+      <h3 class="buy-now_title modal_title">Buy now</h3>
 
       <div class="buy-now_checkbox-container">
         <label class="buy-now_checkbox-label">
@@ -35,7 +57,6 @@
       </div>
 
       <form name="buy-now" class="form buy-now_form">
-        
         <label class="form_label">
           <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
         </label>
@@ -45,7 +66,13 @@
         </label>
 
         <label class="form_label">
-          <textarea class="input textarea" name="comment" id="comment" rows="3" placeholder="Comment" ></textarea>
+          <textarea
+            class="input textarea"
+            name="comment"
+            id="comment"
+            rows="3"
+            placeholder="Comment"
+          ></textarea>
         </label>
       </form>
 
@@ -58,27 +85,56 @@
   |============================
 */ -->
 
-    <div class="modal js-modal" data-modal="buy-now_ingredients">
+    <div class="buy-now-ingredients_modal modal js-modal" data-modal="buy-now_ingredients">
       <button type="button" class="modal-close js-modal-close">X</button>
-      <h3 class="modal_title">Chocolate icecream</h3>
-      <div class="image"></div>
-      <ul>
-        <li>ckal</li>
-        <li>Proteins</li>
-        <li>Fats</li>
-        <li>Carbs</li>
+      <h3 class="modal_title buy-now-ingredients_title">Chocolate icecream</h3>
+      <div class="buy-now-ingredients_image-underlay"></div>
+      <ul class="buy-now-ingredients_list">
+        <li class="buy-now-ingredients_item">
+          <div class="nutrients_underlay">320</div>
+          <p class="nutrients">ckal</p>
+        </li>
+        <li class="buy-now-ingredients_item">
+          <div class="nutrients_underlay">4g</div>
+          <p class="nutrients">Proteins</p>
+        </li>
+        <li class="buy-now-ingredients_item">
+          <div class="nutrients_underlay">8,2g</div>
+          <p class="nutrients">Fats</p>
+        </li>
+        <li class="buy-now-ingredients_item">
+          <div class="nutrients_underlay">40,4g</div>
+          <p class="nutrients">Carbs</p>
+        </li>
       </ul>
-      <p>Ingredients</p>
-      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, officiis?</div>
-      <form name="buy-now">
-        <label>
-          <input type="text" name="name" autocomplete="on" placeholder="Name" />
+      <p class="ingredients_small-title">Ingredients</p>
+
+      <ul class="ingredients_list">
+        <li class="ingredients_item"><span>Milk</span><span>100ml</span></li>
+        <li class="ingredients_item"><span>Belgian chocolate</span><span>20g</span></li>
+        <li class="ingredients_item"><span>Cream</span><span>150 ml</span></li>
+        <li class="ingredients_item"><span>Cocoa powder</span><span>30g</span></li>
+        <li class="ingredients_item"><span>Sugar</span><span>40g</span></li>
+        <li class="ingredients_item"><span>Vanilla sugar</span><span>10g</span></li>
+      </ul>
+
+      <form name="buy-now" class="form buy-now_form">
+        <label class="form_label">
+          <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
         </label>
-        <label>
-          <input type="tel" name="tel" autocomplete="on" placeholder="Phone" />
+
+        <label class="form_label">
+          <input class="input" type="tel" name="tel" autocomplete="on" placeholder="Phone" />
         </label>
-        <label>
-          <input type="text" name="comment" autocomplete="on" placeholder="Comment" />
+
+        <label class="form_label">
+          <textarea
+            class="input textarea"
+            name="comment"
+            id="comment"
+            rows="3"
+            placeholder="Comment"
+          ></textarea>
         </label>
       </form>
       <button type="submit">Submit</button>
@@ -90,21 +146,23 @@
   |============================
 */ -->
 
-    <div class="modal js-modal" data-modal="how-made">
+    <div class="how-its-made_modal modal js-modal" data-modal="how-made">
       <button type="button" class="modal-close js-modal-close">X</button>
-      <h3 class="modal_title">Buy now</h3>
+      <h3 class="modal_title how-its-made_title">How it’s made?</h3>
       <iframe
-        width="560"
-        height="315"
+        class="how-its-made_video"
+        width="224"
+        height="200"
         src="https://www.youtube.com/embed/zagD0LQdsDE"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni minus incidunt voluptate
-        quae tempora saepe excepturi repellendus adipisci ipsam.
+      <div class="how-its-made_text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et
       </div>
     </div>
 
@@ -114,19 +172,17 @@
   |============================
 */ -->
 
-    <div class="modal js-modal" data-modal="locations">
+    <div class="location_modal modal js-modal" data-modal="locations">
       <button type="button" class="modal-close js-modal-close">X</button>
-      <h3 class="modal_title">Buy now</h3>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1467.6141402940586!2d30.52492646283971!3d50.449541745586096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce50ffa1b91f%3A0x42d5962fe7e791c!2z0JzQsNC50LTQsNC9INCd0LXQt9Cw0LvQtdC20L3QvtGB0YLRlg!5e0!3m2!1suk!2sua!4v1665785887368!5m2!1suk!2sua"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-      <a href="">Open Map</a>
+      <h3 class="modal_title location-title">Our Locations</h3>
+      <img
+        class="location-image"
+        src="images/modal/map.mobile_@1x.jpg"
+        alt="Map"
+        width="224px"
+        height="199px"
+      />
+      <a href="https://goo.gl/maps/gjFAeG6t4nSM62w7A">Open Map</a>
     </div>
 
     <!-- /**
@@ -135,30 +191,42 @@
   |============================
 */ -->
 
-    <div class="modal js-modal" data-modal="franchise">
+    <div class="franchise_modal modal js-modal" data-modal="franchise">
       <button type="button" class="modal-close js-modal-close">X</button>
-      <h3 class="modal_title">Thank you for your interest in owning an Ice Cream shop</h3>
-      <div>
+      <h3 class="modal_title franchise_title">
+        Thank you for your interest in owning an Ice Cream shop
+      </h3>
+      <div class="franchise_text">
         Due to the overwhelming volume of franchise requests we are not accepting new franchisee
         applications at this time. Once the application process resumes, we will contact you for
         further information. Please fill out the contact information below and we will reach out for
         additional information. We appreciate your patience.
       </div>
-      <form name="buy-now">
-        <label>
-          <input type="text" name="name" autocomplete="on" placeholder="Name" />
-        </label>
-        <label>
-          <input type="tel" name="tel" autocomplete="on" placeholder="Phone" />
-        </label>
-        <label>
-          <input type="email" name="email" autocomplete="on" placeholder="E-mail" />
+
+            <form name="buy-now" class="form buy-now_form">
+        <label class="form_label">
+          <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
         </label>
 
-        <label>
-          <input type="text" name="comment" autocomplete="on" placeholder="Comment" />
+        <label class="form_label">
+          <input class="input" type="tel" name="tel" autocomplete="on" placeholder="Phone" />
+        </label>
+
+                <label>
+          <input class="input" type="email" name="email" autocomplete="on" placeholder="E-mail" />
+        </label>
+
+        <label class="form_label">
+          <textarea
+            class="input textarea"
+            name="comment"
+            id="comment"
+            rows="3"
+            placeholder="Comment"
+          ></textarea>
         </label>
       </form>
+
       <button type="submit">Submit</button>
     </div>
 
@@ -169,4 +237,3 @@
 */ -->
 
     <div class="overlay js-overlay-modal"></div>
-
