--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,29 +2,17 @@
   <div class="container">
     <ul class="advantages__list list">
       <li class="advantages__item">
-        <div class="advantages__circle advantages__circle-cow">
-          <svg class="advantages__icon" width="36" height="36">
-            <!-- <use href="./images/advantages/cow.sec.adv_@1x.png"></use> -->
-          </svg>
-        </div>
+        <div class="advantages__circle advantages__circle-cow"></div>
         <p class="advantages__point">721</p>
         <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </li>
       <li class="advantages__item">
-        <div class="advantages__circle advantages__circle-weight">
-          <svg class="advantages__icon" width="36" height="36">
-            <!-- <use href=""></use> -->
-          </svg>
-        </div>
+        <div class="advantages__circle advantages__circle-weight"></div>
         <p class="advantages__point">16 KG</p>
         <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </li>
       <li class="advantages__item">
-        <div class="advantages__circle advantages__circle-ice">
-          <svg class="advantages__icon" width="36" height="36">
-            <!-- <use href=""></use> -->
-          </svg>
-        </div>
+        <div class="advantages__circle advantages__circle-ice"></div>
         <p class="advantages__point">84</p>
         <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </li>
