--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -1,7 +1,5 @@
 .about {
   background-color: #84A178;
-  color: #fcfcfc;
-  padding: 60px, 20px;
   text-align: center;
 
   &.section {
@@ -11,11 +9,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   &__inline {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+      margin-bottom: 8px;
+    }
   }
   &__uppertitle {
     margin-bottom: 12px;
@@ -23,10 +28,17 @@
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-
     line-height: 1.22;
+
     text-align: center;
     text-transform: uppercase;
+
+    @media screen and (min-width: 768px) {
+      font-weight: 800;
+      font-size: 22px;
+      letter-spacing: 0.04em;
+      line-height: 1.23;
+    }
   }
   &__title {
     font-family: 'Seymour One';
@@ -41,6 +53,13 @@
     width: 200px;
 
     margin-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 1.26;
+      letter-spacing: 0.06em;
+      width: 100%;
+    }
   }
   &__shape {
     display: block;
@@ -50,9 +69,25 @@
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
     border-radius: 140.182px;
     margin-bottom: 60px;
+    @media screen and (min-width: 768px) {
+      width: 334.65px;
+      height: 330px;
+      border-radius: 165.879px;
+      margin-bottom: 0px;
+    }
   }
   &__image {
-    transform: translateY(20px);
+    transform: translateY(21.82px);
+    width: 279px;
+    @media screen and (min-width: 768px) {
+      width: 335px;
+      transform: translateY(25.88px);
+    }
+  }
+  &__inline {
+    @media screen and (min-width: 768px) {
+      text-align: start;
+    }
   }
   &__uppertext {
     margin-bottom: 4px;
@@ -63,6 +98,13 @@
     text-align: center;
     letter-spacing: 0.04em;
     width: 220px;
+    @media screen and (min-width: 768px) {
+      width: 336px;
+      text-align: start;
+      line-height: 1.76;
+      margin-bottom: 4px;
+      margin-top: 5px;
+    }
   }
   &__text {
     margin-bottom: 20px;
@@ -72,5 +114,24 @@
 
     text-align: center;
     width: 220px;
+    @media screen and (min-width: 768px) {
+      width: 336px;
+      text-align: start;
+      line-height: 1.76;
+      margin-bottom: 8px;
+    }
+  }
+  &__lowertext {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.94;
+    letter-spacing: 0.04em;
+    width: 336px;
+    margin-bottom: 48px;
+    text-align: start;
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 }
