--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -10,12 +10,23 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 
     margin-bottom: 18px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 16px;
+      font-size: 48px;
+      line-height: 1.23;
+    }
   }
   &__list {
     padding: 0;
     margin: 0;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-around;
+    }
   }
   &__item {
     display: flex;
@@ -23,6 +34,9 @@
     align-items: center;
     &:not(:last-child) {
       margin-bottom: 18px;
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+      }
     }
   }
   &__circle {
@@ -54,13 +68,22 @@
       position: absolute;
       left: 0px;
     }
+    @media screen and (min-width: 768px) {
+      margin-bottom: 32px;
+    }
   }
   &__text {
     font-weight: 700;
     font-size: 12px;
-    line-height: 1.67;
+    line-height: 1.7;
 
     text-align: center;
     width: 230px;
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.74;
+      font-weight: 400;
+      width: 152px;
+    }
   }
 }
