--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -76,7 +76,9 @@
             <p class="">New York</p>
           </li>
           <li class="contacts__address">
-            <a class="link" href="">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
+            <a class="link" href=""
+              >777726 Sterling Pl, Brooklyn, NY  1112222,  USA  </a
+            >
           </li>
           <li class="contacts-timetable">
             <p class="contacts-timetable__day">Monday - Friday</p>
