--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -16,3 +16,150 @@
         }
       }
 }
+//Text //
+.footer-banner {
+  margin-bottom: 40px;
+  @media screen and (max-width: 1199px) {
+    width: 234px;
+    margin-bottom: 40px;
+  }
+  &__paragraf {
+    font-family: 'Montserrat' sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.22;
+    color: var(--primery-text-color);
+    text-transform: uppercase;
+    margin-bottom: 16px;
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 1.2;
+      font-weight: 400;
+      letter-spacing: 0.4em;
+      margin-bottom: 14px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+      font-size: 26px;
+      line-height: 1.22;
+      letter-spacing: 0.4em;
+      margin-bottom: 9px;
+    }
+}
+}
+.footer-banner__header {
+  font-family: 'Montserrat' sans-serif;
+  font-size: 34px;
+  line-height: 1.2;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0.4em;
+  color: var(--primery-text-color);
+  text-transform: uppercase;
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 1.22;
+    letter-spacing: 0.06em;
+     }
+     @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+      font-size: 48px;
+      line-height: 1.22;
+      letter-spacing: 0.06em;
+     }
+}
+// Socials //
+.socials {
+  display: flex;
+  margin-bottom: 38px;
+  &__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+ }
+ &__item:not(:last-child) {
+  margin-right: 28px;
+ }
+}
+.socials__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  background-color: var(--primery-accent-color);
+  color: #84A178;
+  border-radius: 50%;
+  transition: color var(--main-animation);
+  &:hover {
+    color: var(--primery-text-color);
+  }
+  &:focus {
+    color: var(--primery-text-color);
+    width: 35px;
+  }
+}
+.socials__icon {
+  fill: currentColor;
+}
+// Contact //
+.footer-contacts {
+  display: flex;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
+  &__address {
+    text-align: right;
+  }
+  &__text {
+    font-family: 'Montserrat' sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.86;
+    color: var(--primery-title-color);
+    @media screen and(min-width:768px) and (max-width: 1199px) {
+      font-size: 14px;
+    }
+    @media screen and(min-width:1200px) {
+      font-size: 16px;
+      letter-spacing: 0.2em;
+    }
+  }
+  &__tel {
+    font-family: 'Montserrat' sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.86;
+    color: var(--primery-text-color);
+    @media screen and(min-width:768px) and (max-width: 1199px) {
+      font-size: 14px;
+    }
+    @media screen and(min-width:1200px) {
+      font-size: 16px;
+      letter-spacing: 0.2em;
+    }
+  }
+}
+// Copyright //
+.copyright {
+  text-align: center;
+  border-top: 1px solid #e1e1e1;
+  width: 100%;
+  justify-content: center;
+  padding: 16px 20px;
+  
+  &__text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 152%;
+    /* or 21px */
+    text-align: center;
+    color: #7A7A7A;
+}
+}
