--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './utils/visually-hidden';
 @import './utils/placeholders';
 @import './utils/mixins';
+@import './utils/btn';
 
 // base styles
 @import './base/reset';
