--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,7 +1,14 @@
 :root {
   --primery-text-color: #FCFCFC;
+  --primery-disabled-color: #ABABAB;
+  --primery-br-disabled-color: #ABABAB;
   --primery-accent-color: #F8D24E;
+  --primery-bg-color: #F8D24E;
+  --primery-border-color: #F8D24E;
   --primery-title-color: #131313;
+  --primery-hover-color: #0a8817;
+  --primery-br-hover-color: #0a8817;
+
   --primery-title-font: font-family: 'Seymour One';
   --main-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
