add close modal icon, change icon in sprite

--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,33 +1,15 @@
     <!-- /**
-  |============================
-  | Open modal buttons
-  |============================
-*/ -->
-
-    <div class="buttons">
-      <button type="button" data-modal="buy-now" class="open-modal js-open-modal">Buy Now</button>
-      <button type="button" data-modal="buy-now_ingredients" class="open-modal js-open-modal">
-        Buy Now (with Ingredients)
-      </button>
-      <button type="button" data-modal="how-made" class="open-modal js-open-modal">
-        How It`s Made
-      </button>
-      <button type="button" data-modal="locations" class="open-modal js-open-modal">
-        Our Locations
-      </button>
-      <button type="button" data-modal="franchise" class="open-modal js-open-modal">
-        Franchise
-      </button>
-    </div>
-
-    <!-- /**
       |============================
       | Buy Now Modal Window
       |============================
     */ -->
 
     <div class="buy-now_modal modal js-modal" data-modal="buy-now">
-      <button type="button" class="modal-close js-modal-close">X</button>
+      <button type="button" class="modal-close js-modal-close">
+        <svg class="icon-close-modal" width="11" height="11">
+          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+        </svg>
+      </button>
       <h3 class="buy-now_title modal_title">Buy now</h3>
 
       <div class="buy-now_checkbox-container">
@@ -86,7 +68,11 @@
 */ -->
 
     <div class="buy-now-ingredients_modal modal js-modal" data-modal="buy-now_ingredients">
-      <button type="button" class="modal-close js-modal-close">X</button>
+      <button type="button" class="modal-close js-modal-close">
+        <svg class="icon-close-modal" width="11" height="11">
+          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+        </svg>
+      </button>
       <h3 class="modal_title buy-now-ingredients_title">Chocolate icecream</h3>
       <div class="buy-now-ingredients_image-underlay"></div>
       <ul class="buy-now-ingredients_list">
@@ -147,7 +133,11 @@
 */ -->
 
     <div class="how-its-made_modal modal js-modal" data-modal="how-made">
-      <button type="button" class="modal-close js-modal-close">X</button>
+      <button type="button" class="modal-close js-modal-close">
+        <svg class="icon-close-modal" width="11" height="11">
+          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+        </svg>
+      </button>
       <h3 class="modal_title how-its-made_title">How it’s made?</h3>
       <iframe
         class="how-its-made_video"
@@ -173,7 +163,11 @@
 */ -->
 
     <div class="location_modal modal js-modal" data-modal="locations">
-      <button type="button" class="modal-close js-modal-close">X</button>
+      <button type="button" class="modal-close js-modal-close">
+        <svg class="icon-close-modal" width="11" height="11">
+          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+        </svg>
+      </button>
       <h3 class="modal_title location-title">Our Locations</h3>
       <img
         class="location-image"
@@ -192,7 +186,11 @@
 */ -->
 
     <div class="franchise_modal modal js-modal" data-modal="franchise">
-      <button type="button" class="modal-close js-modal-close">X</button>
+      <button type="button" class="modal-close js-modal-close">
+        <svg class="icon-close-modal" width="11" height="11">
+          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+        </svg>
+      </button>
       <h3 class="modal_title franchise_title">
         Thank you for your interest in owning an Ice Cream shop
       </h3>
