--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to GitHub">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="./images\svg\symbol-defs.svg#githubdefault"></use>
+                  <use href="images\svg\icons.svg#github-default"></use>
                 </svg>
               </a>
             </li>
@@ -26,7 +26,7 @@
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
                 <svg class="socials__icon" width="34" height="34">
-                  <use href="./images\svg\symbol-defs.svg#telegramdefault"></use>
+                  <use href="images\svg\icons.svg#telegram-default"></use>
                 </svg>
               </a>
             </li>
@@ -38,7 +38,7 @@
                 aria-label="link to Facebook">
                 <svg class="socials__icon" width="34" height="34">
                   <use
-                    href="./images\svg\symbol-defs.svg#facebookdefault">
+                    href="./images\svg\icons.svg#facebook-default">
                 </use>
                 </svg>
               </a>
