change close icon

--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -7,7 +7,7 @@
     <div class="buy-now_modal modal js-modal" data-modal="buy-now">
       <button type="button" class="modal-close js-modal-close">
         <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+          <use href="./images/svg/icons.svg#close-icon"></use>
         </svg>
       </button>
       <h3 class="buy-now_title modal_title">Buy now</h3>
@@ -56,9 +56,8 @@
             placeholder="Comment"
           ></textarea>
         </label>
+        <button class="modal-submit_button" type="submit">Submit</button>
       </form>
-
-      <button type="submit">Submit</button>
     </div>
 
     <!-- /**
@@ -70,7 +69,7 @@
     <div class="buy-now-ingredients_modal modal js-modal" data-modal="buy-now_ingredients">
       <button type="button" class="modal-close js-modal-close">
         <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+          <use href="./images/svg/icons.svg#close-icon"></use>
         </svg>
       </button>
       <h3 class="modal_title buy-now-ingredients_title">Chocolate icecream</h3>
@@ -122,8 +121,8 @@
             placeholder="Comment"
           ></textarea>
         </label>
+        <button class="modal-submit_button" type="submit">Submit</button>
       </form>
-      <button type="submit">Submit</button>
     </div>
 
     <!-- /**
@@ -135,7 +134,7 @@
     <div class="how-its-made_modal modal js-modal" data-modal="how-made">
       <button type="button" class="modal-close js-modal-close">
         <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+          <use href="./images/svg/icons.svg#close-icon"></use>
         </svg>
       </button>
       <h3 class="modal_title how-its-made_title">How it’s made?</h3>
@@ -165,7 +164,7 @@
     <div class="location_modal modal js-modal" data-modal="locations">
       <button type="button" class="modal-close js-modal-close">
         <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+          <use href="./images/svg/icons.svg#close-icon"></use>
         </svg>
       </button>
       <h3 class="modal_title location-title">Our Locations</h3>
@@ -188,7 +187,7 @@
     <div class="franchise_modal modal js-modal" data-modal="franchise">
       <button type="button" class="modal-close js-modal-close">
         <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/symbol-defs.svg#close-modal"></use>
+          <use href="./images/svg/icons.svg#close-icon"></use>
         </svg>
       </button>
       <h3 class="modal_title franchise_title">
@@ -223,9 +222,8 @@
             placeholder="Comment"
           ></textarea>
         </label>
+        <button class="modal-submit_button" type="submit">Submit</button>
       </form>
-
-      <button type="submit">Submit</button>
     </div>
 
     <!-- /**
