modal minor fixes

--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -175,7 +175,7 @@
         width="224px"
         height="199px"
       />
-      <a href="https://goo.gl/maps/gjFAeG6t4nSM62w7A">Open Map</a>
+      <a class="open-map_link" href="https://goo.gl/maps/gjFAeG6t4nSM62w7A">Open Map</a>
     </div>
 
     <!-- /**
