--- a/src/sass/layouts/modal-windows/_modal-5-franchise.scss
+++ b/src/sass/layouts/modal-windows/_modal-5-franchise.scss
@@ -1,6 +1,6 @@
 .franchise_modal {
   @media screen and(max-width: 480px) {
-    max-height: 100%;
+    height: auto;
     overflow-y: scroll;
   }
 
