--- a/src/sass/layouts/modal-windows/_modal-4-location.scss
+++ b/src/sass/layouts/modal-windows/_modal-4-location.scss
@@ -1,16 +1,37 @@
 .location_modal {
-    @media screen and(min-width: 481px) {
-        padding: 32px 60px;
-    }
+  height: auto;
+
+  @media screen and(min-width: 481px) {
+    padding: 32px 60px;
+  }
 }
 
 .location-image {
-    display: block;
-    border-radius: 10px;
-    margin-bottom: 24px;
+  display: block;
+  border-radius: 10px;
+  margin-bottom: 24px;
 
-    @media screen and(min-width: 481px)  {
-        width: 448px;
-        height: 260px;
-    }
+  @media screen and(min-width: 481px) {
+    width: 448px;
+    height: 260px;
+  }
+}
+
+.open-map_link {
+  padding: 12px 34px;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  text-decoration: none;
+
+  color: #131313;
+
+  background-color: #f8d24e;
+  border-radius: 10px;
+
+  @media screen and(min-width: 481px) {
+    font-size: 14px;
+    line-height: calc(17 / 14);
+  }
 }
