add button style
button styles for normal, hover, focus, and disabled
-Anastasia Demianenko

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -19,7 +19,7 @@
         <p class="about__lowertext">This is enough to choose ice cream and coffee for any mood!</p>
         <button type="button" data-modal="how-made" class="about__button open-modal js-open-modal btn">Read More
           <svg class="about__icon" width="12" height="12">
-            <!-- <use href="./images/svg/symbol-defs.svg#black-arrow"></use> -->
+            <use href="./images/svg/icons.svg#arrow-small"></use>
           </svg>
         </button>
       </div>
