--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -4,3 +4,24 @@
   padding-top: $pt;
   padding-bottom: $pb;
 }
+
+@mixin for-phone-up {
+	@media (max-width: 767px) {
+	  @content;
+	}
+ }
+ @mixin for-tablet-up-min {
+	@media (min-width: 768px) {
+	  @content;
+	}
+ }
+ @mixin for-tablet-up {
+	@media (min-width: 768px) and (max-width: 1199px) {
+	  @content;
+	}
+ }
+ @mixin for-desktop {
+	@media (min-width: 1200px) {
+	  @content;
+	}
+ }
